fix: change align of avatar image

--- a/hexal/css/sections/about.css
+++ b/hexal/css/sections/about.css
@@ -31,6 +31,10 @@
   justify-content: space-between;
 }
 
+.author-img-container img {
+  margin: 0 0 1px 4px;
+}
+
 .author-personal-info {
   text-transform: capitalize; 
 }
